# train-hgk

./: Makefile  README.md
train-app/: Cargo.toml  Dockerfile  dev-entrypoint.sh  run-entrypoint.sh
train-app/migrations/2022-07-20-170941_create_exercises/: up.sql
train-app/src/: db.rs  exercise.rs  health.rs  main.rs  schema.rs  urls.rs
train-app/src/exercise/: manager.rs  model.rs  view.rs
train-gui/: Cargo.toml  Dockerfile  dev-entrypoint.sh  index.html  run-entrypoint.sh
train-gui/src/: main.rs
train-model/src/: lib.rs
