[package]
name = "train-gui"
version = "0.1.0"
authors = ["Iacopo Breschi  <iacopobreschi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format="0.2.25"
reqwasm = "0.5.0"
types = { path= "../train-model"}
wasm-bindgen-futures = "0.4.30"
yew = "0.19.3"
